GA default.html setup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,9 @@
 
   </div>
 
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
+
 </body>
 </html>
