default.html update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   </div>
 
     {% if jekyll.environment == 'production' %}
-    {% include analytics.html %}
+    {% include google-analytics.html %}
     {% endif %}
 
 </body>
